compleat admin + user login and validation

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "framer-motion": "^12.23.12",
+    "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.540.0",
     "mongodb": "^5.9.2",
