--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tiptap/extension-character-count": "^3.4.2",
     "@tiptap/extension-image": "^3.4.2",
     "@tiptap/extension-link": "^3.4.2",
@@ -18,7 +19,9 @@
     "@tiptap/starter-kit": "^3.4.2",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -30,7 +33,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "recharts": "^3.1.2"
+    "recharts": "^3.1.2",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -41,6 +45,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   }
 }
