--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": false, // true for checking
+    "strict": false, // true for checking.
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
